fix(): limit dark mode link colors

--- a/apps/groceries-list/src/styles.scss
+++ b/apps/groceries-list/src/styles.scss
@@ -47,7 +47,7 @@ body {
 .app-dark {
   @include angular-material-color($dark-theme);
 
-  a {
+  a:not(.mat-*) {
     color: #7c4dff;
     &:visited {
       color: #8e37bb;
